<resources>
    <string name="app_name">RokomariTest</string>
    <string name="network_error">Network connection cannot be established</string>
    <string name="invalid_json_response">Invalid response</string>
    <string name="application_update_required">Application update required</string>
    <string name="application_id_invalid">Application ID is not valid</string>
    <string name="invalid_request">Invalid request</string>
    <string name="connectivity_error">Connection error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="access_deny">Access deny</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup_title">Getting Started</string>
    <string name="signup_body">Create account to continue!</string>
    <string name="name">User Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="please_insert_name">Please Enter Your Name</string>
    <string name="email">Enter Email</string>
    <string name="pass">Enter Password</string>
    <string name="please_insert_password">Please enter password</string>
    <string name="please_insert_email">Please enter your email</string>
    <string name="please_insert_validEmail">Please enter valid email address</string>
</resources>